--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <!-- navbar -->
         <nav class="navbar">
           <a href="#" class="nav-link">Home</a>
-          <a href="#" class="nav-link">Services</a>
-          <a href="#" class="nav-link">Products</a>
-          <a href="#" class="nav-link">Team</a>
-          <a href="#" class="nav-link">Reviews</a>
+          <a href="#services" class="nav-link">Services</a>
+          <a href="#products" class="nav-link">Products</a>
+          <a href="#team" class="nav-link">Team</a>
+          <a href="#review" class="nav-link">Reviews</a>
         </nav>
         <!-- nav icons -->
         <div class="nav-icons">
@@ -206,5 +206,112 @@
         </div>
       </div>
     </section>
+    <!-- * Reviews -->
+    <section class="review container" id="review">
+      <!-- heading -->
+      <div class="heading">
+        <h2>Customer's Reviews</h2>
+      </div>
+      <!-- reviews -->
+      <div class="reviews">
+        <!-- review-box -->
+        <div class="review-box">
+          <img src="./images/review-1.jpg" alt="" />
+          <h2>Jonas Blue</h2>
+          <span
+            >The taste of coffee is Stunning, <br />
+            subtle and smooth flavor.
+          </span>
+          <p>
+            The taste of coffee can vary depending on the type of bean, roast
+            level, and brewing method used. Some people prefer a strong and bold
+            taste, while others prefer a more subtle and smooth flavor.
+          </p>
+        </div>
+        <!-- review-box -->
+        <div class="review-box">
+          <img src="./images/review-2.jpg" alt="" />
+          <h2>Eden Blue</h2>
+          <span
+            >The taste of coffee is Stunning, <br />
+            subtle and smooth flavor.
+          </span>
+          <p>
+            The taste of coffee can vary depending on the type of bean, roast
+            level, and brewing method used. Some people prefer a strong and bold
+            taste, while others prefer a more subtle and smooth flavor.
+          </p>
+        </div>
+        <!-- review-box -->
+        <div class="review-box">
+          <img src="./images/review-3.jpg" alt="" />
+          <h2>Charlie</h2>
+          <span
+            >The taste of coffee is Stunning, <br />
+            subtle and smooth flavor.
+          </span>
+          <p>
+            The taste of coffee can vary depending on the type of bean, roast
+            level, and brewing method used. Some people prefer a strong and bold
+            taste, while others prefer a more subtle and smooth flavor.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- * Book -->
+    <section class="book container" id="book">
+      <img src="./images/book.jpg" class="book-img" alt="" />
+      <div class="book-overlay"></div>
+      <div class="book-data">
+        <h2>
+          Let's book a Table <br />
+          For you
+        </h2>
+        <form>
+          <div class="input-box">
+            <i class="bx bx-phone-call"></i>
+            <input type="tel" placeholder="Your Number" required />
+          </div>
+          <div class="input-box">
+            <i class="bx bx-user"></i>
+            <input type="number" placeholder="People" required />
+          </div>
+          <button type="submit" class="book-btn">Book Table</button>
+        </form>
+        <p>We will contact you to confirm your booking</p>
+      </div>
+    </section>
+    <!-- * Footer -->
+    <footer class="footer container">
+      <div class="footer-box">
+        <a href="#" class="logo">Q.Cafe</a>
+        <div class="social">
+          <a href="#"><i class="bx bxl-twitch"></i></a>
+          <a href="#"><i class="bx bxl-twitter"></i></a>
+          <a href="#"><i class="bx bxl-linkedin"></i></a>
+          <a href="#"><i class="bx bxl-youtube"></i></a>
+        </div>
+      </div>
+      <div class="footer-box">
+        <h3>About</h3>
+        <a href="#">Our Story </a>
+        <a href="#">FAQ </a>
+        <a href="#">Careers </a>
+      </div>
+      <div class="footer-box">
+        <h3>Customer's Recourses</h3>
+        <a href="#">Menu</a>
+        <a href="#">Location </a>
+        <a href="#">Support </a>
+      </div>
+      <div class="footer-box">
+        <h3>Services</h3>
+        <a href="#">Payment Options</a>
+        <a href="#">Refunds & Exchanges </a>
+        <a href="#">Limitation Of Liability </a>
+      </div>
+    </footer>
+    <!-- * copyright -->
+    <p class="copyright">&copy; QCAFE</p>
   </body>
 </html>
